# Nightstream-readonly

./: .gitignore  AGENTS.md  Cargo.toml  PAPER.md  README.md  STRUCTURE.md  clippy.toml  file_aggregator.sh  run_both_fri.sh  run_integration_tests.sh  rustfmt.toml  sage_params.sage  show_diff.sh  verify_hash_mle_security.sh
crates/neo/: Cargo.toml
crates/neo-ajtai/: Cargo.toml  README.md
crates/neo-ajtai/src/: commit.rs  decomp.rs  embedding.rs  error.rs  lib.rs  prg.rs  rot.rs  s_module.rs  types.rs  util.rs
crates/neo-ajtai/tests/: basic_commit_tests.rs  binding_tests.rs  commit_constant_time.rs  commitment_deserialize_invariants.rs  decomp_representability_limit.rs  decomp_row_major_roundtrip.rs  decomp_split.rs  digit_mapping_tests.rs  layout_equivalence.rs  linear_opening_security.rs  pay_per_bit_tests.rs  pp_registry.rs  pp_seed_registry_invariants.rs  pp_unload_reload_commit_stability.rs  prg_tests.rs  rayon_determinism.rs  red_team.rs  rotation_tests.rs  s_homomorphism.rs  s_module.rs  seeded_pp_commit_matches_materialized.rs  test_helpers.rs
crates/neo-ccs/: Cargo.toml  README.md
crates/neo-ccs/src/: bridge_adapter.rs  ccs_sumcheck.rs  converters.rs  error.rs  integration.rs  lib.rs  lib_legacy.rs  matrix.rs  poly.rs  r1cs.rs  relations.rs  sparse.rs  tests.rs  to_r1cs.rs  traits.rs  utils.rs
crates/neo-ccs/tests/: ccs_property_tests.rs  ccs_to_r1cs_linear.rs  check_me_consistency_padded_y.rs  commitment_gadgets.rs  commitment_opening_tests.rs  converter_tests.rs  direct_sum.rs  direct_sum_security_tests.rs  identity_validation_tests.rs  large_ccs.rs  lib_tests.rs  poseidon2_goldilocks_tests.rs  public_equality_tests.rs  r1cs_embedding_shape_tests.rs  red_team.rs  red_team_me.rs  simple_mcs_opening_test.rs  sumcheck.rs  unified_fields.rs
crates/neo-challenge/: Cargo.toml  README.md
crates/neo-challenge/src/: lib.rs  metrics.rs
crates/neo-challenge/tests/: invertibility.rs  red_team.rs
crates/neo-fold/: Cargo.toml  README.md
crates/neo-fold-ffi/: Cargo.toml
crates/neo-fold-ffi/include/: module.modulemap  neo_fold_ffi.h
crates/neo-fold-ffi/src/: lib.rs
crates/neo-fold-ffi/tests/: wasm_demo_workflow.rs
crates/neo-fold-jni/: Cargo.toml
crates/neo-fold-jni/src/: lib.rs
crates/neo-fold/benches/: folding.rs
crates/neo-fold/perf-tests/: fibonacci.rs
crates/neo-fold/poseidon2-tests/: poseidon2_ic_circuit_batch_10.json  test_ic_single_step.rs
crates/neo-fold/riscv-tests/: test_riscv_circuit_l2_transfer_compiled_trace_prove_verify.rs  test_riscv_fibonacci_compiled_full_prove_verify.rs  test_riscv_fibonacci_compiled_trace_prove_verify.rs  test_riscv_program_compiled_full_prove_verify.rs  test_riscv_program_compiled_trace_prove_verify.rs  test_riscv_program_crosscheck.rs  test_riscv_program_full_prove_verify.rs  test_riscv_program_rv32m_trace_prove_verify.rs  test_riscv_u64_output_compiled_full_prove_verify.rs  test_riscv_u64_output_compiled_trace_prove_verify.rs
crates/neo-fold/sha256-tests/: test_single_step.rs
crates/neo-fold/src/: bridge_adapter.rs  error.rs  finalize.rs  folding.rs  lib.rs  output_binding.rs  pi_ccs.rs  pi_dec.rs  pi_rlc.rs  riscv_shard.rs  riscv_trace_shard.rs  serde_helpers.rs  session.rs  shard.rs  shard_proof_types.rs  strong_set.rs  sumcheck.rs  test_export.rs  transcript.rs  verify_linear.rs
crates/neo-fold/starstream-tests/: test_starstream_tx_export_invalid.json  test_starstream_tx_invalid_crosscheck.rs  test_starstream_tx_invalid_optimized.rs  (+4 more)
crates/neo-math/: Cargo.toml  README.md
crates/neo-math/src/: field.rs  (+5 more)
crates/neo-memory/: Cargo.toml  README.md
crates/neo-midnight-bridge/: Cargo.toml  README.md
crates/neo-params/: Cargo.toml  README.md
crates/neo-quickcheck-tests/: Cargo.toml  README.md
crates/neo-redteam-tests/: Cargo.toml  README.md
crates/neo-reductions/: Cargo.toml
crates/neo-spartan-bridge/: Cargo.toml  README.md
crates/neo-tests/: Cargo.toml  README.md
crates/neo-transcript/: Cargo.toml
crates/neo-vm-trace/: Cargo.toml
neo-arithmetize/: Cargo.toml  README.md
neo-arithmetize/src/: lib.rs
neo-bench/: Cargo.toml  run_benchmark.sh
neo-bench/benches/: spartan_performance.rs
neo-bench/src/: main.rs
neo-ccs/: Cargo.toml
neo-ccs/src/: ccs_sumcheck.rs  converters.rs  integration.rs  lib.rs  sumcheck.rs  to_r1cs.rs
neo-ccs/tests/: ccs_to_r1cs_linear.rs  converter_tests.rs  large_ccs.rs  lib_tests.rs  sumcheck.rs  unified_fields.rs
neo-commit/: Cargo.toml
neo-commit/src/: fri_pcs.rs  lib.rs  spartan2_fri_engine.rs
neo-commit/tests/: binding.rs  extractor.rs  fri_pcs_p3.rs  gaussian_dist.rs  homomorphism.rs  lib_tests.rs  open_non_base.rs  params_and_modulus.rs  random_linear_combo_guard.rs  spartan_pcs_tests.rs  verify_bounds.rs
neo-fields/: Cargo.toml
neo-fields/src/: lib.rs  spartan2_engine.rs
neo-fields/tests/: helpers.rs  lib_tests.rs  non_residue.rs  properties.rs
neo-fold/: Cargo.toml
neo-fold/benches/: folding.rs
neo-fold/src/: lib.rs  spartan_ivc.rs
neo-fold/tests/: compression.rs  edge_cases.rs  full_flow.rs  ivc_tests.rs  knowledge_soundness.rs  norm_scaling.rs  security_tests.rs  serialization.rs  soundness.rs  spartan_folding_tests.rs  transcript_tests.rs  unified.rs  verifier_chain.rs
neo-main/: Cargo.toml
neo-main/src/: main.rs
neo-modint/: Cargo.toml
neo-modint/src/: lib.rs
neo-modint/tests/: lib_tests.rs
neo-orchestrator/: Cargo.toml
neo-orchestrator/src/: lib.rs  neutronnova_integration.rs  spartan2.rs
neo-orchestrator/tests/: spartan2_integration_test.rs  spartan_integration.rs
neo-ring/: Cargo.toml
neo-ring/src/: lib.rs
neo-ring/tests/: lib_tests.rs
neo-sumcheck/: Cargo.toml
neo-sumcheck/benches/: fri_backends.rs  fri_bench.rs  sumcheck.rs
neo-sumcheck/src/: challenger.rs  fiat_shamir.rs  lib.rs  oracle.rs  sumcheck.rs
neo-sumcheck/tests/: blinding.rs  challenger_tests.rs  fiat_shamir_tests.rs  folding.rs  fri_pcs.rs  merkle_debug.rs  nark_sumcheck.rs  oracle.rs  oracle_tamper.rs  production.rs  serialization.rs  soundness.rs  spartan_sumcheck_tests.rs  sumcheck.rs  sumcheck_tests.rs  zk_properties.rs
(+825 files in other folders)
