[workspace]
members = [
  "crates/neo-params", 
  "crates/neo-math", 
  # Implementation crates
  "crates/neo-transcript",
  "crates/neo-ajtai",
  "crates/neo-ccs",
  "crates/neo-fold",
  "crates/neo-challenge",
  "crates/neo-spartan-bridge",
  # Facade crate
  "crates/neo",
  # CLI
  "crates/neo-cli",
  # Tests
  "crates/neo-tests",
  "crates/neo-redteam-tests",
  "crates/neo-quickcheck-tests",
]
resolver = "2"

[workspace.dependencies]
# Core
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
subtle = "2.6"
rayon = "1.10"
once_cell = "1.19"

# Plonky3 core (Poseidon2 transcript only)
p3-field = "0.3.0"
p3-goldilocks = { version = "0.3.0", default-features = false }
p3-matrix = "0.3.0"    # Still needed by some crates, will remove in separate cleanup
p3-symmetric = "0.3.0"    # Poseidon2 for FS transcript
p3-poseidon2 = "0.3.0"
p3-challenger = "0.3.0"
byteorder = "1.5"
anyhow = "1.0"
bincode = "1.3"

# Spartan2 and circuit dependencies
spartan2 = { git = "https://github.com/nicarq/Spartan2.git", rev = "b244f5c891718235efc7b2b9814b6725010d5e71", default-features = false, features = ["p3_backend"] }
bellpepper-core = { version = "0.4" }
ff = { version = "0.13" }

# Performance & allocator  
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1.16"

# Cryptographic hashing
blake3 = "1.5"

# Benches & tests
criterion = { version = "0.6", features = ["html_reports"] }
proptest = "1.7"



[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = "symbols"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Nico Arqueros <nico.arquerosr@gmail.com>"]
rust-version = "1.88"
