[workspace]
members = [
  "crates/neo-params", 
  "crates/neo-math", 
  # Implementation crates
  "crates/neo-transcript",
  "crates/neo-ajtai",
  "crates/neo-ccs",
  "crates/neo-reductions",
  "crates/neo-fold",
  "crates/neo-spartan-bridge",
  "crates/neo-vm-trace",
  "crates/neo-memory",
]
resolver = "2"

[workspace.dependencies]
# Core
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
subtle = "2.6"
rayon = "1.10"
once_cell = "1.19"

# Plonky3 core (Poseidon2 transcript only)
p3-field = "0.3.0"
p3-goldilocks = { version = "0.3.0", default-features = false }
p3-matrix = "0.3.0"    # Still needed by some crates, will remove in separate cleanup
p3-symmetric = "0.3.0"    # Poseidon2 for FS transcript
p3-poseidon2 = "0.3.0"
p3-challenger = "0.3.0"
byteorder = "1.5"
anyhow = "1.0"
bincode = "1.3"

# Spartan2 and circuit dependencies
spartan2 = { git = "https://github.com/nicarq/Spartan2.git", rev = "b244f5c891718235efc7b2b9814b6725010d5e71", default-features = false, features = ["p3_backend"] }
bellpepper-core = { version = "0.4" }
ff = { version = "0.13" }

# Performance & allocator  
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1.16"

# Cryptographic hashing
blake3 = "1.5"

# Benches & tests
criterion = { version = "0.6", features = ["html_reports"] }
proptest = "1.7"

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = "symbols"

# Profiling-friendly profile: balances performance with good debug symbols
[profile.profiling]
inherits = "release"
lto = "thin"
codegen-units = 16
debug = 2  # Full debug info including line numbers
strip = false  # Keep symbols for profiler

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Nico Arqueros (Shinkai Labs) <nico@shinkai.com>"]
rust-version = "1.88"

[workspace.lints.clippy]
# Allow older-style format strings (prefer explicit for complex error messages)
uninlined_format_args = "allow"
# Allow functions with more than 7 arguments (cryptographic functions often need many params)
too_many_arguments = "allow"
# Allow range loops with indices (simple for i in 0..D is more performant for fixed-size arrays)
needless_range_loop = "allow"
# Allow vec! even when array could be used (vec! is sometimes clearer for mutable collections)
useless_vec = "allow"
# Allow manual += operations (sometimes clearer in mathematical contexts)
assign_op_pattern = "allow"
# Allow identity operations in test code (makes formulas clearer, e.g., 1*1 + 2*1)
identity_op = "allow"
# Allow empty lines after doc comments (useful for visual separation of sections)
empty_line_after_doc_comments = "allow"
# Allow .get(0) instead of .first() (sometimes .get() is more consistent with other indices)
get_first = "allow"
# Allow complex types in cryptographic code (proof systems have inherently complex types)
type_complexity = "allow"
# Allow manual loops instead of copy_from_slice (loops can be clearer for small copies)
manual_memcpy = "allow"
# Allow let binding before return (can improve debugging and readability)
let_and_return = "allow"
# Allow cloning Copy types (sometimes needed for API compatibility)
clone_on_copy = "allow"
# Allow redundant closures (sometimes clearer than function pointers)
redundant_closure = "allow"
# Allow abs() as cast pattern (traditional and clear)
cast_abs_to_unsigned = "allow"
# Allow first().is_some() pattern (can be clearer than !is_empty())
unnecessary_first_then_check = "allow"
# Allow unnecessary casts (sometimes needed for clarity or future-proofing)
unnecessary_cast = "allow"
# Allow uppercase acronyms like SNARK, CCS (standard in cryptography)
upper_case_acronyms = "allow"
