[package]
name = "neo-arithmetize"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
neo-fields = { path = "../neo-fields" }
neo-ccs = { path = "../neo-ccs" }
p3-matrix = { workspace = true }
p3-field = "0.3"
