[package]
name = "neo-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
rand      = { workspace = true }

# Your local crates (used by the Neo side)
neo-ccs         = { path = "../neo-ccs" }
neo-commit      = { path = "../neo-commit" }
neo-fields      = { path = "../neo-fields" }
neo-orchestrator= { path = "../neo-orchestrator" }
p3-matrix       = { workspace = true }
p3-field        = "0.3.0"

# Optional Nova; enable with `--features with-nova`
# You may need to adjust the version and/or features to match your Nova checkout.
nova-snark = { version = "0.39", optional = true, default-features = false }
ff = { version = "0.13", optional = true }

[features]
with-nova = ["dep:nova-snark", "dep:ff"]
