[package]
name = "neo-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
rand      = { workspace = true }

# Your local crates (used by the Neo side)
neo-ccs         = { path = "../neo-ccs" }
neo-commit      = { path = "../neo-commit" }
neo-math      = { path = "../crates/neo-math" }
neo-orchestrator= { path = "../neo-orchestrator" }
p3-matrix       = { workspace = true }
p3-field        = "0.3.0"

# Optional Nova; enable with `--features with-nova`
# You may need to adjust the version and/or features to match your Nova checkout.
nova-snark = { version = "0.39", optional = true, default-features = false }
ff = { version = "0.13", optional = true }

# Spartan2 for SNARK mode benchmarking
spartan2 = { git = "https://github.com/microsoft/Spartan2.git", rev = "cc21201d0d0293794ccc8ddd24903a9e570afb6e", default-features = false, optional = true }

# Additional dependencies for comprehensive testing
neo-arithmetize = { path = "../neo-arithmetize" }
neo-decomp = { path = "../neo-decomp" }
neo-modint = { path = "../neo-modint" }
neo-ring = { path = "../neo-ring" }

[dev-dependencies]
criterion = { workspace = true }

[features]
with-nova = ["dep:nova-snark", "dep:ff"]

[[bench]]
name = "spartan_performance"
harness = false
