[package]
name = "neo-ccs"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[dependencies]
neo-fields = { path = "../neo-fields" }
neo-poly = { path = "../neo-poly" }
neo-commit = { path = "../neo-commit" }
neo-ring = { path = "../neo-ring" }
neo-modint = { path = "../neo-modint" }
p3-matrix = { workspace = true }
p3-field = { version = "0.3" }
neo-sumcheck = { path = "../neo-sumcheck" }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = { workspace = true }
thiserror = "1.0"
rayon = { workspace = true }
spartan2 = { git = "https://github.com/microsoft/Spartan2.git", rev = "cc21201d0d0293794ccc8ddd24903a9e570afb6e", default-features = false, optional = true }

[features]
default = []
snark_spartan2 = ["dep:spartan2", "neo-fields/snark_spartan2"]

[dev-dependencies]
