[package]
name = "neo-commit"
edition = "2021"
version = "0.1.0"
authors = ["Example Author <example@example.com>"]

[dependencies]
neo-fields = { path = "../neo-fields" }
neo-poly = { path = "../neo-poly" }
neo-ring = { path = "../neo-ring" }
neo-decomp = { path = "../neo-decomp" }
p3-matrix = "0.3.0"
p3-field = "0.3"
rand = { workspace = true }
neo-modint = { path = "../neo-modint" }
rand_distr = { workspace = true }
subtle = "2.5"
blake3 = "1.3"

[features]
prop-tests = []

[dev-dependencies]
criterion = { workspace = true }
quickcheck = "1"
quickcheck_macros = "1"
rand_chacha = { workspace = true }

[[bench]]
name = "commit"
harness = false
