[package]
name = "neo-commit"
edition = "2021"
version = "0.1.0"
authors = ["Example Author <example@example.com>"]

[dependencies]
neo-fields = { path = "../neo-fields" }
neo-poly = { path = "../neo-poly" }
neo-ring = { path = "../neo-ring" }
neo-decomp = { path = "../neo-decomp" }
neo-sumcheck = { path = "../neo-sumcheck" }   # for canonical FS helpers
p3-matrix = "0.3.0"
p3-field = "0.3"
rand = { workspace = true }
neo-modint = { path = "../neo-modint" }
rand_distr = { workspace = true }
subtle = "2.5"
spartan2 = { git = "https://github.com/microsoft/Spartan2.git", rev = "cc21201d0d0293794ccc8ddd24903a9e570afb6e", default-features = false, optional = true }
p3-fri = { workspace = true }
p3-challenger = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-goldilocks = { workspace = true }
p3-commit = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-dft = { workspace = true }

[features]
default = []
prop-tests = []
real_fri = []  # Enable real p3-fri PCS implementation
snark_spartan2 = ["dep:spartan2", "neo-fields/snark_spartan2"]

[dev-dependencies]
criterion = { workspace = true }
quickcheck = "1"
quickcheck_macros = "1"
rand_chacha = { workspace = true }

[[bench]]
name = "commit"
harness = false
