[package]
name = "neo-fields"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[features]
default = []

[dependencies]
p3-goldilocks = { workspace = true }
p3-field = { version = "0.3" }
rand = { workspace = true }
subtle = "2.5"
spartan2 = { workspace = true }
ff = "0.13"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
