[package]
name = "neo-fields"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[features]
default = []
snark_spartan2 = ["dep:spartan2"]

[dependencies]
p3-goldilocks = { workspace = true }
p3-field = { version = "0.3" }
rand = { workspace = true }
subtle = "2.5"
spartan2 = { git = "https://github.com/microsoft/Spartan2.git", rev = "cc21201d0d0293794ccc8ddd24903a9e570afb6e", default-features = false, optional = true }
ff = "0.13"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
