[package]
name = "neo-main"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[dependencies]
neo-ring = { path = "../neo-ring" }
neo-fields = { path = "../neo-fields" }
neo-poly = { path = "../neo-poly" }
neo-decomp = { path = "../neo-decomp" }
neo-commit = { path = "../neo-commit" }
neo-ccs = { path = "../neo-ccs" }
neo-fold = { path = "../neo-fold" }
neo-modint = { path = "../neo-modint" }
neo-sumcheck = { path = "../neo-sumcheck", default-features = false }
neo-arithmetize = { path = "../neo-arithmetize" }
neo-orchestrator = { path = "../neo-orchestrator" }
rand = { workspace = true }
p3-field = "0.3"
p3-matrix = { workspace = true }

[features]
default = []
# FRI features removed - using direct polynomial checks in NARK mode