[package]
name = "neo-main"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }

[dependencies]
# Modern Neo crates
neo-params = { path = "../crates/neo-params" }
neo-math = { path = "../crates/neo-math" }
neo-ajtai = { path = "../crates/neo-ajtai" }
neo-ccs = { path = "../crates/neo-ccs" }
neo-fold = { path = "../crates/neo-fold" }
neo-challenge = { path = "../crates/neo-challenge" }
neo-spartan-bridge = { path = "../crates/neo-spartan-bridge" }
neo-orchestrator = { path = "../neo-orchestrator" }

# External dependencies
rand.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
anyhow.workspace = true
bincode.workspace = true

[features]
default = []
# FRI features removed - using direct polynomial checks in NARK mode