[package]
name = "neo-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror       = "1"
neo-ccs         = { path = "../neo-ccs" }
neo-commit      = { path = "../neo-commit" }
neo-fields      = { path = "../neo-fields" }
neo-fold        = { path = "../neo-fold" }
neo-sumcheck    = { path = "../neo-sumcheck" }
neo-arithmetize = { path = "../neo-arithmetize" }
neo-modint      = { path = "../neo-modint" }
neo-ring        = { path = "../neo-ring" }
neo-decomp      = { path = "../neo-decomp" }
p3-field        = "0.3"
p3-matrix       = "0.3"
spartan2        = { git = "https://github.com/microsoft/Spartan2.git", rev = "cc21201d0d0293794ccc8ddd24903a9e570afb6e", default-features = false, optional = true }
memchr          = "2.0"
bincode         = "1.0"

[features]
default = []
