[package]
name = "neo-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Modern Neo crates
neo-params = { path = "../crates/neo-params" }
neo-math = { path = "../crates/neo-math" }
neo-ajtai = { path = "../crates/neo-ajtai" }
neo-ccs = { path = "../crates/neo-ccs" }
neo-fold = { path = "../crates/neo-fold" }
neo-challenge = { path = "../crates/neo-challenge" }
neo-spartan-bridge = { path = "../crates/neo-spartan-bridge" }

# External dependencies
thiserror.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
anyhow.workspace = true
bincode.workspace = true

[features]
default = []
