[package]
name = "neo-sumcheck"
edition = "2021"
version = "0.1.0"
authors = ["Example Author <example@example.com>"]

[lints]
workspace = true

[dependencies]
neo-fields = { path = "../neo-fields" }
neo-poly = { path = "../neo-poly" }
neo-modint = { path = "../neo-modint" }
neo-ring = { path = "../neo-ring" }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = { workspace = true }
p3-field = "0.3"
p3-poseidon2 = "0.3.0"
p3-symmetric = "0.3.0"
p3-goldilocks = { workspace = true }
thiserror = "1.0"
byteorder = "1.5"
subtle = "2.5"

# FRI dependencies removed - using direct polynomial checks in NARK mode

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
criterion = { version = "0.5", features = ["html_reports"] }
p3-field = "0.3.0"
p3-goldilocks = "0.3.0"
p3-poseidon2 = "0.3.0"
p3-symmetric = "0.3.0"
rand = { workspace = true }

[features]
default = []
# FRI features removed - using direct polynomial checks in NARK mode

[[bench]]
name = "sumcheck"
harness = false
