[package]
name = "neo-ajtai"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
# Enable variable-time pay-per-bit optimization (⚠️  SIDE-CHANNEL RISK ⚠️ )
# This feature allows timing-dependent optimizations that leak digit sparsity patterns
# through timing/cache access patterns. Only enable when prover-local leakage is acceptable.
# Default builds use constant-time dense computation for audit-ready deployments.
# See: https://cr.yp.to/antiforgery/cachetiming-20050414.pdf  
variable_time_commit = []

[dependencies]
# Workspace deps
neo-math = { path = "../neo-math" }
neo-params = { path = "../neo-params" }
neo-ccs = { path = "../neo-ccs" }
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
subtle = "2.6"
rayon = "1.10"

# Plonky3 (field + small dense matrix)
p3-field = "0.3.0"
p3-goldilocks = { version = "0.3.0", default-features = false }
p3-matrix = "0.3.0"

[dev-dependencies]
proptest = "1.7"
