[package]
name = "neo-ajtai"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lints]
workspace = true

[features]
default = []
# Expose testing utilities (like commit_spec) without making them part of the stable API
testing = []
# Enable verbose logging for debugging (OFF by default for security - CWE-532)
neo-logs = []

[dependencies]
# Workspace deps
neo-math = { path = "../neo-math" }
neo-params = { path = "../neo-params" }
neo-ccs = { path = "../neo-ccs" }
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
subtle = "2.6"
rayon = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Plonky3 (field + small dense matrix)
p3-field = "0.4.1"
p3-goldilocks = { version = "0.4.1", default-features = false }
p3-matrix = "0.4.1"

[dev-dependencies]
proptest = "1.7"
serde_json = { workspace = true }
p3-symmetric = "0.4.1"
