[package]
name = "neo-fold"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
neo-math = { path = "../neo-math" }
neo-params = { path = "../neo-params" }
neo-ccs = { path = "../neo-ccs" }
neo-ajtai = { path = "../neo-ajtai" }
neo-reductions = { path = "../neo-reductions" }
neo-transcript = { path = "../neo-transcript" }
neo-memory = { path = "../neo-memory" } 
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-goldilocks = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Profiling
pprof = { version = "0.13", features = ["flamegraph", "protobuf"], optional = true }

[features]
default = ["paper-exact"]
profile-flame = ["pprof"]
paper-exact = ["neo-reductions/paper-exact"]
debug-logs = ["neo-reductions/debug-logs", "neo-memory/debug-logs"]

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
neo-vm-trace = { path = "../neo-vm-trace" }
