[package]
name = "neo-fold"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
neo-math = { path = "../neo-math" }
neo-params = { path = "../neo-params" }
neo-ccs = { path = "../neo-ccs" }
neo-ajtai = { path = "../neo-ajtai" }
neo-reductions = { path = "../neo-reductions" }
neo-transcript = { path = "../neo-transcript" }
neo-memory = { path = "../neo-memory" } 
neo-vm-trace = { path = "../neo-vm-trace" }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-goldilocks = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Profiling
pprof = { version = "0.13", features = ["flamegraph", "protobuf"], optional = true }

[features]
default = ["paper-exact"]
profile-flame = ["pprof"]
paper-exact = ["neo-reductions/paper-exact"]
debug-logs = ["neo-reductions/debug-logs", "neo-memory/debug-logs"]

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
bellpepper = { workspace = true }
bellpepper-core = { workspace = true }
ff = { workspace = true, features = ["derive"] }
sha2 = { version = "0.10" }

[[test]]
name = "test_riscv_program_full_prove_verify"
path = "riscv-tests/test_riscv_program_full_prove_verify.rs"

[[test]]
name = "test_starstream_tx_valid_crosscheck"
path = "starstream-tests/test_starstream_tx_valid_crosscheck.rs"

[[test]]
name = "test_starstream_tx_valid_optimized"
path = "starstream-tests/test_starstream_tx_valid_optimized.rs"

[[test]]
name = "test_starstream_tx_valid_paper_exact"
path = "starstream-tests/test_starstream_tx_valid_paper_exact.rs"

[[test]]
name = "test_starstream_tx_invalid_crosscheck"
path = "starstream-tests/test_starstream_tx_invalid_crosscheck.rs"

[[test]]
name = "test_starstream_tx_invalid_optimized"
path = "starstream-tests/test_starstream_tx_invalid_optimized.rs"

[[test]]
name = "test_starstream_tx_invalid_paper_exact"
path = "starstream-tests/test_starstream_tx_invalid_paper_exact.rs"

[[test]]
name = "test_poseidon2_single_step"
path = "poseidon2-tests/test_ic_single_step.rs"
required-features = []

[[test]]
name = "test_sha256_single_step"
path = "sha256-tests/test_single_step.rs"
required-features = []
